<resources>
    <string name="app_name">RTS Logger</string>
    <string name="G_marker_1">1.0G</string>
    <string name="G_marker_3">3.0G</string>
    <string name="please_connect_the_logger">Please connect logger</string>
    <string name="settings">Settings</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="more_tools">More tools</string>
    <string name="acceleration_timer">Acceleration Timer</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="g_force_meter">G-Force Meter</string>
    <string name="_0_60_timer">0-60 Timer</string>
    <string name="enter_speed_target">Enter speed target:</string>
    <string name="top_10_runs">Top 10 Runs</string>
    <string name="save_as_csv">Save as CSV</string>
    <string name="start_recording">Start Recording</string>
    <string name="save_run">Save Run</string>
    <string name="view_sessions">View Sessions</string>
    <string name="upload_session">Upload session</string>
    <string name="load_session_from_database">Load Session from database</string>
</resources>