<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navDrawerTimer"
            android:title="@string/_0_60_timer"
            android:icon="@drawable/ic_timer_logo"/>
        <item
            android:id="@+id/navDrawerGforce"
            android:title="@string/g_force_meter"
            android:icon="@drawable/ic_gforce_mark"/>
        <item
            android:id="@+id/navDrawerSaveRun"
            android:title="@string/save_run"
            android:icon="@drawable/ic_stopwatch_arrow_down"/>
        <item
            android:id="@+id/navDrawerMapSessions"
            android:title="@string/view_sessions"
            android:icon="@drawable/ic_globe_mark"/>
        <item
            android:id="@+id/navDrawerSettings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_cog"/>
    </group>
</menu>